# hexapod_kinematics

./: .gitignore  README.md  extractor_config.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: hexapod_gait.yml  masses_996.yml
hexapod_kinematics/: __init__.py  __main__.py
hexapod_kinematics/application/: body_extract_io.py  build_model.py  export_header.py  export_json.py  extract_body.py  extract_links.py  log_coords.py  motion_report.py  pipeline.py  simulate_motion.py  sync_hexapod.py
hexapod_kinematics/application/motion/: __init__.py  ik_sim.py  pulse_sim.py
hexapod_kinematics/core/: config_loader.py
hexapod_kinematics/core/constants/: __init__.py  body_frame.py  folders.py  foot_pad.py  lcs.py  runtime.py  servo.py  tolerances.py  world_frame.py
hexapod_kinematics/core/logging/: __init__.py  (+1 more)
hexapod_kinematics/domain/: __init__.py  body_frame_kin.py  body_mounts.py  dynamics_leg.py  frames.py  frames_world.py  gait_config.py  gait_ik.py  gait_metrics.py  gait_pulse.py  kinematics.py  lcs_roles.py  link_length.py  masses.py  neutral_pose.py
hexapod_kinematics/presentation/: animate_motion.py  cli.py  interactive_motion.py  visualize_kinematics.py
science/: NOTES.md
tests/: test_body_mounts.py  test_cli.py  test_config_loader.py  test_dynamics_sync.py  test_export.py  test_frame_invariants.py  test_frames.py  test_gait.py  test_gait_config_masses.py  test_kinematics.py  test_kompas_integration.py  test_lcs_roles.py  test_link_length.py  test_neutral_preview.py  test_simulate.py
tests/fixtures/: kinematics_996_min.json
(+6 files in other folders)
